--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/express/index.js",
     "dev": "nodemon src/express/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Igor Mushketik",
   "license": "ISC",
@@ -26,7 +26,9 @@
     "nanoid": "^3.3.4"
   },
   "devDependencies": {
-    "nodemod": "^3.0.6",
+    "@jest-mock/express": "^2.0.2",
+    "@types/jest": "^29.5.11",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   }
 }
